update: 代码优化